Adding telephony candidate on location only for better logging
I have also refactored the way we store location candidates to make it less complex, more readable and avoid code duplication with the introduction of telephony candidate.

Bug: b/452977595
Flag: android.timezone.flags.enable_fused_time_zone_detector

Change-Id: Ie5a33c3da6314609f49a56b547451b28dadb330e